--- a/index.html
+++ b/index.html
@@ -8,36 +8,43 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css">
+  <script src="./JavaScript/calculator.js" defer></script>
   
   <title>Frontend Mentor | Tip calculator app</title>
 
 
 
 </head>
-<body>
+<body onload="onLoad()">
   <img src="./images/logo.svg" alt="splitter" class="splitter-img">
  <main class="main-container">
    <section class="section-data"> 
     <div class="bill">
-      <p>Bill</p>
-      <input type="text" class="bill-input" id="bill-input" placeholder="">
+      <div class="titles">
+        <p>Bill</p> <p class="custom-errormsj" hidden id="error-bill"> Can't be zero</p>
+      </div>      
+      <input type="number"  class="bill-input" id="bill-input" name="input" placeholder="">
     </div>
     <div class="tip-offer">
       <p>Select Tip %</p>
-      <div class="tip-offer-1">
-        <button class="btn-offer">5%</button>
-        <button class="btn-offer">10%</button>
-        <button class="btn-offer">15%</button>
-      </div>
-      <div class="tip-offer-2">
-        <button class="btn-offer">25%</button>
-        <button class="btn-offer">50%</button>
-        <input type="text" class="input-custom" > 
-      </div>
+      <div class="tip-container">
+        <div class="tip-offer-1">
+          <button class="btn-offer" id="tip5">5%</button>
+          <button class="btn-offer" id="tip10">10%</button>
+          <button class="btn-offer" id="tip15">15%</button>
+        </div>
+        <div class="tip-offer-2">
+          <button class="btn-offer" id="tip25">25%</button>
+          <button class="btn-offer" id="tip50">50%</button>
+          <input type="text"  class="btn-offer" id="custom-input" name="input"> 
+        </div>
+      </div>     
     </div>      
       <div class="people-container">
-        <p>Number of People</p>
-        <input type="text" class="bill-number-people" id="bill-number-people">
+        <div class="titles">
+          <p>Number of People</p>  <p class="custom-errormsj" hidden id="error-people">Can't be zero</p>
+        </div>        
+        <input type="number" oninput="validity.valid||(value='0');" class="bill-number-people" id="bill-number-people" name="input">
       </div>
     
    </section>
@@ -53,7 +60,7 @@
           <input type="text" disabled class="tip-total-input" id="tip-total-input" placeholder="" >
          </div>              
        </div>      
-      <button type="button"> RESET </button>
+      <button type="button" id="btn-reset"> RESET </button>
      </div>    
   </section>
  </main>
